--- a/README.html
+++ b/README.html
@@ -29,7 +29,14 @@
 
 <h3 id="version0.2">Version 0.2</h3>
 
-<p>** Version 0.2.1 **</p>
+<p><strong>Version 0.2.2</strong></p>
+
+<ul>
+<li>Added JS functions to translate BS4 Navmenu object to ASU global mobile menu.</li>
+<li>Improvements to mobile menu formatting.</li>
+</ul>
+
+<p><strong>Version 0.2.1</strong></p>
 
 <ul>
 <li>Continued improvement to the product. Minor adjustments.</li>
