--- a/README.html
+++ b/README.html
@@ -27,9 +27,14 @@
 
 <h2 id="releasenotes">Release Notes</h2>
 
-<h3 id="version0.2">Version 0.2</h3>
+<h3 id="version0.3">Version 0.3</h3>
 
-<p><strong>Version 0.2.2</strong></p>
+<ul>
+<li>Added JS functions to translate BS4 Navmenu object to ASU global mobile menu.</li>
+<li>Improvements to mobile menu formatting.</li>
+</ul>
+
+<h3 id="version0.2">Version 0.2</h3>
 
 <ul>
 <li>Added JS functions to translate BS4 Navmenu object to ASU global mobile menu.</li>
